fixed wraparound for codeblocks

--- a/css/main.scss
+++ b/css/main.scss
@@ -30,8 +30,15 @@ hr {
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 code {
-    background-color: #d8e7ff;
     color: #002b72;
+    text-wrap: wrap;
+}
+
+
+.highlight{
+  padding:0.1em 0.5em;
+	
+    background-color: #d8e7ff;
 }
 
 // divs
